# auto-release-snake

./: .gitignore  README.md  poetry.toml  pyproject.toml
.github/workflows/: python-publish.yml
auto_release_snake/: cli.py  cli_test.py
